--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ p{
 
 @media (max-width: 1028px){
   .title-image{
-    position: static
+    position: static;
     transform: rotate(0);
   }
 
